<resources>
    <string name="app_name">VehicleFragment</string>
    <string name="for_attachment_picture">for attachment picture</string>
    <string name="car_brand_and_model">Car brand and model</string>
    <string name="specification">Specification</string>
    <string name="service_information">Service information</string>
    <string name="textView">TextView</string>
    <string name="short_service_info_editable">Short service info (editable):</string>
    <string name="edit">EDIT</string>
    <string name="add">Add</string>
    <string name="years_of_release">Years of release*</string>
    <string name="model">Model*</string>
    <string name="brand">Brand*</string>
    <string name="engine">Engine:</string>
    <string name="petrol">petrol</string>
    <string name="diesel">diesel</string>
    <string name="electric">electric</string>
    <string name="gearbox">GearBox:</string>
    <string name="stick">stick</string>
    <string name="auto">auto</string>
    <string name="engine_displacement_ml">engine displacement(ml)</string>
    <string name="power">Power</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="engine_displacement">engine displacement</string>
    <string name="to_task_list">To task list</string>
    <string name="addimage">addImage</string>
    />
</resources>